--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,11 +21,17 @@ jobs:
       with:
         python-version: '3.x'
 
+    # Step 3: Install build dependencies
+    - name: Install build dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential libpq-dev python3-dev
+
     # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt --verbose
     
     # Step 4: Install Newman (for running Postman tests)
     - name: Install Newman
