--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,4 +39,4 @@ jobs:
 
     # Step 5: Run the API tests using Newman
     - name: Run API tests
-      run: newman run postman_collection.json
+      run: newman run tests/postman_collection.json
