--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,8 +38,9 @@ jobs:
       run: npm install -g newman
 
     - name: Running app
-      run: python app.py
-      
+      run: |
+        nohup python app.py
+
     # Step 5: Run API tests using Newman
     - name: Run API tests
       run: newman run tests/postman_collection.json
